Simplify transaction demos