@@ -12,17 +12,12 @@ import org.aopalliance.intercept.ConstructorInterceptor;
 import org.aopalliance.intercept.MethodInterceptor;
 import org.glassfish.hk2.api.Filter;
 import org.glassfish.hk2.api.InterceptionService;
-import org.glassfish.hk2.api.ServiceLocator;
 import org.glassfish.hk2.utilities.BuilderHelper;
 
 public class TransactionInterceptionService implements InterceptionService {
-    private final List<MethodInterceptor> interceptors;
 
     @Inject
-    TransactionInterceptionService(ServiceLocator locator, TransactionInterceptor interceptor) {
-        locator.inject(interceptor);
-        this.interceptors = List.of(interceptor);
-    }
+    private TransactionInterceptor interceptor;
 
     @Override
     public Filter getDescriptorFilter() {
@@ -31,14 +26,11 @@ public class TransactionInterceptionService implements InterceptionService {
 
     @Override
     public List<MethodInterceptor> getMethodInterceptors(Method method) {
-        var isInTransactionScope = method.isAnnotationPresent(Transactional.class)
-                || method.getDeclaringClass().isAnnotationPresent(Transactional.class);
-        return isInTransactionScope ? interceptors : Collections.emptyList();
+        return method.isAnnotationPresent(Transactional.class) ? List.of(interceptor) : Collections.emptyList();
     }
 
     @Override
     public List<ConstructorInterceptor> getConstructorInterceptors(Constructor<?> constructor) {
         return Collections.emptyList();
     }
-
 }
